--- a/changelog/3/3.7/3.7.0.md
+++ b/changelog/3/3.7/3.7.0.md
@@ -6,13 +6,28 @@ tags:
   - release
   - minor
   - new-features
+  - bug-fixes
 layout: layout/version.liquid
 eleventyComputed:
   page-id: "changelog-item"
 ---
 ## New features
 ### Search
-- Quick search is now the default on all pages. The header link for search will open a sidebar with a search box, the box here works the same as the search page where typing will automatically generate a list of results. The advanced search link will take you to the results page including the query string of the text entered.
+- **Quick Search** is now the default across all pages. Clicking the header search link opens a sidebar with a search box that works like the main search page—results update automatically as you type.
+- **Advanced Search** link takes you to the full results page, including the query string from your input.
+
+## Improvements
+### Search
+- Removed Caesar buttons from the index to prevent clutter from single-letter results.
+- Added new term options to improve result accuracy.
 
 ## Bug fixes
-- Fixed color of filter icon in dark mode, which caused a duplicate icon to be visible
+- Fixed filter icon color in dark mode to remove duplicate icon visibility.
+
+## Behind the scenes improvements
+<details>
+<summary>This is a list of more technical and non-front-facing improvements made to the site</summary>
+
+### Improvements
+- Refactored `hasURL()` and `getURL()` functions into the toolkit to reduce code duplication.
+</details>
